Fix #90 - transform button lis to dropdown when more than 2. Fix z-index or tag autocomplete on Firefox

--- a/themes/Rozier/static/css/alerts/alerts.less
+++ b/themes/Rozier/static/css/alerts/alerts.less
@@ -8,7 +8,7 @@
 .uk-alert {
     text-align: center;
     padding: 18px;
-    z-index: 99999;
+    z-index: 9999;
     font-size: 12px;
     font-weight: bold;
     background:#eaeaea;
