--- a/themes/Rozier/static/css/autocomplete/autocomplete.less
+++ b/themes/Rozier/static/css/autocomplete/autocomplete.less
@@ -12,6 +12,7 @@
 
 .ui-autocomplete{
    font-size:12px;
+   z-index: 99999;
 
    .ui-menu-item{
         height:36px;
@@ -20,7 +21,7 @@
         background:#e5e5e5;
         color:#444;
 
-        &:hover{  
+        &:hover{
             color:#333;
             background: #cecece;
         }
@@ -28,8 +29,8 @@
 }
 
 .ui-widget-content{
-    
-    .ui-state-focus{    
+
+    .ui-state-focus{
         color:#333;
         border:1px solid #dddddd;
         font-weight: normal;
