--- a/themes/Rozier/static/css/responsive/less-1280.less
+++ b/themes/Rozier/static/css/responsive/less-1280.less
@@ -21,3 +21,31 @@
 .node-type-field-head-type, .node-type-field-type{
     width:25%;
 }
+
+
+/* -------- User panel -------- */
+
+#main-container-inner{
+
+    #user-panel{
+        width:130px;
+
+        .uk-icon-button{
+            margin:0 0 12px 0;
+        }
+    }
+
+    #user-picture{
+        width:56px; height:56px;
+
+        img{
+            width:56px; height:56px;
+        }
+    }
+
+    #user{
+        .user-actions{
+            padding:15px 32px;
+        }
+    }
+}
